# cbr-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
cbr_bot/: api.py  bot.py  database.py
cbr_bot/handlers/: exchange_command.py  rates_command.py  start_command.py
cbr_bot/tasks/: update_rates.py
